--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "flow-bin": "^0.46.0",
     "react-scripts": "1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "flow": "flow",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
