--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "github": "^9.2.0",
+    "github-api": "^3.0.0",
+    "glamorous": "^3.15.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5"
   },
   "devDependencies": {
     "flow-bin": "^0.46.0",
